// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/avatar/demo/badge.md correctly 1`] = `
<div>
  <span
    style="margin-right:24px"
  >
    <span
      class="wmstool-badge"
    >
      <span
        class="wmstool-avatar wmstool-avatar-square wmstool-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
      <sup
        class="wmstool-scroll-number wmstool-badge-count"
        data-show="true"
        title="1"
      >
        <span
          class="wmstool-scroll-number-only"
          style="transition:none;-ms-transform:translateY(-1100%);-webkit-transform:translateY(-1100%);transform:translateY(-1100%)"
        >
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class="current"
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
          <p
            class=""
          >
            0
          </p>
          <p
            class=""
          >
            1
          </p>
          <p
            class=""
          >
            2
          </p>
          <p
            class=""
          >
            3
          </p>
          <p
            class=""
          >
            4
          </p>
          <p
            class=""
          >
            5
          </p>
          <p
            class=""
          >
            6
          </p>
          <p
            class=""
          >
            7
          </p>
          <p
            class=""
          >
            8
          </p>
          <p
            class=""
          >
            9
          </p>
        </span>
      </sup>
    </span>
  </span>
  <span>
    <span
      class="wmstool-badge"
    >
      <span
        class="wmstool-avatar wmstool-avatar-square wmstool-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
      <sup
        class="wmstool-scroll-number wmstool-badge-dot"
        data-show="true"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/avatar/demo/basic.md correctly 1`] = `
<div>
  <div>
    <span
      class="wmstool-avatar wmstool-avatar-lg wmstool-avatar-circle wmstool-avatar-icon"
    >
      <i
        class="anticon anticon-user"
      />
    </span>
    <span
      class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-icon"
    >
      <i
        class="anticon anticon-user"
      />
    </span>
    <span
      class="wmstool-avatar wmstool-avatar-sm wmstool-avatar-circle wmstool-avatar-icon"
    >
      <i
        class="anticon anticon-user"
      />
    </span>
  </div>
  <div>
    <span
      class="wmstool-avatar wmstool-avatar-lg wmstool-avatar-square wmstool-avatar-icon"
    >
      <i
        class="anticon anticon-user"
      />
    </span>
    <span
      class="wmstool-avatar wmstool-avatar-square wmstool-avatar-icon"
    >
      <i
        class="anticon anticon-user"
      />
    </span>
    <span
      class="wmstool-avatar wmstool-avatar-sm wmstool-avatar-square wmstool-avatar-icon"
    >
      <i
        class="anticon anticon-user"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/avatar/demo/dynamic.md correctly 1`] = `
<div>
  <span
    class="wmstool-avatar wmstool-avatar-lg wmstool-avatar-circle"
    style="background-color:#f56a00;vertical-align:middle"
  >
    <span
      class="wmstool-avatar-string"
    >
      U
    </span>
  </span>
  <button
    class="wmstool-btn wmstool-btn-sm"
    style="margin-left:16px;vertical-align:middle"
    type="button"
  >
    <span>
      Change
    </span>
  </button>
</div>
`;

exports[`renders ./components/avatar/demo/type.md correctly 1`] = `
<div>
  <span
    class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-icon"
  >
    <i
      class="anticon anticon-user"
    />
  </span>
  <span
    class="wmstool-avatar wmstool-avatar-circle"
  >
    <span
      class="wmstool-avatar-string"
    >
      U
    </span>
  </span>
  <span
    class="wmstool-avatar wmstool-avatar-circle"
  >
    <span
      class="wmstool-avatar-string"
    >
      USER
    </span>
  </span>
  <span
    class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
  >
    <img
      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
    />
  </span>
  <span
    class="wmstool-avatar wmstool-avatar-circle"
    style="color:#f56a00;background-color:#fde3cf"
  >
    <span
      class="wmstool-avatar-string"
    >
      U
    </span>
  </span>
  <span
    class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-icon"
    style="background-color:#87d068"
  >
    <i
      class="anticon anticon-user"
    />
  </span>
</div>
`;
